public enum BattlePhaseId
{
	Placement,
	TurnIdle,
	PlayerTurn,
	EnemyTurn,
	ResolveAction,
	Result
}
